--- a/README.tmpl
+++ b/README.tmpl
@@ -3,23 +3,18 @@
 Go [geohash](https://en.wikipedia.org/wiki/Geohash) library offering encoding
 and decoding for string and integer geohashes.
 
-[![go.dev Reference](https://img.shields.io/badge/doc-reference-007d9b?logo=go&style=flat-square)](https://pkg.go.dev/github.com/mmcloughlin/geohash)
-![Build status](https://img.shields.io/github/actions/workflow/status/mmcloughlin/geohash/ci.yml?style=flat-square)
-[![Coverage](https://img.shields.io/codecov/c/github/mmcloughlin/geohash?style=flat-square)](https://codecov.io/github/mmcloughlin/geohash)
-[![Go Report Card](https://goreportcard.com/badge/github.com/mmcloughlin/geohash?style=flat-square)](https://goreportcard.com/report/github.com/mmcloughlin/geohash)
-
 ## Install
 
 Fetch the package with
 
 ```
-go get github.com/mmcloughlin/{{ .Name }}
+go get github.com/wckd/{{ .Name }}
 ```
 
 And import it into your programs with
 
 ```go
-import "github.com/mmcloughlin/{{ .Name }}"
+import "github.com/wckd/{{ .Name }}"
 ```
 
 {{ .EmitUsage }}
